:test_tube: Usando o HikariCP como gerenciador do pool de conexões

--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.2.0.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-hikaricp</artifactId>
+            <version>6.2.5.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
