:test_tube: Entendendo o cache de segundo nível (ou shared cache)

--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>hibernate-hikaricp</artifactId>
             <version>6.2.5.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-testing</artifactId>
+            <version>6.2.2.Final</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
